--- a/custom_components/galaxie/manifest.json
+++ b/custom_components/galaxie/manifest.json
@@ -8,5 +8,5 @@
   "version": "1.0.0",
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "icon": "logo.png"
+  "icon": "mdi:flag-checkered"
 }
